--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,5 +1,5 @@
 spring.application.name=modern-backend
-spring.datasource.url=jdbc:postgresql://postgres:5432/postgres
+spring.datasource.url=jdbc:postgresql://172.23.75.156:5432/postgres
 spring.datasource.username=postgres
 spring.datasource.password=postgres
 spring.jpa.hibernate.ddl-auto=update
